# qa_guru_hw_20_mobile_automation

./: .env.bstack_android  .env.bstack_credential.example  .env.bstack_ios  .env.local_emulator  .env.local_real  .gitignore  README.md  config.py  pyproject.toml
hw_19_mobile_automation/utils/: allure_browserstack.py  allure_web.py  path.py
hw_20_mobile_automation/models/: applications.py
hw_20_mobile_automation/models/pages/: general_page.py
hw_20_mobile_automation/models/pages/ios_app/: __init__.py  general_page.py
hw_20_mobile_automation/models/pages/wikipedia/: __init__.py  general_page.py  get_started_page.py
hw_20_mobile_automation/utils/: allure_browserstack.py  path.py
tests/: conftest.py
tests/android_app/: conftest.py  test_wikipedia.py
tests/ios_app/: test_ios_app.py
tests/web/: conftest.py  test_wikipedia.py
